# IFermi

./: .buildinfo  .gitignore  .pre-commit-config.yaml  ADMIN.md  CHANGELOG.md  LICENSE  README.md  bulk_objects.py  changelog.html  cli.html  contributing.html  contributors.html  genindex.html  ifermi.analysis.average_properties.html  ifermi.analysis.connected_images.html  ifermi.analysis.connected_subsurfaces.html  ifermi.analysis.equivalent_surfaces.html  ifermi.analysis.equivalent_vertices.html  ifermi.analysis.html  ifermi.analysis.isosurface_area.html  ifermi.analysis.isosurface_dimensionality.html  ifermi.analysis.line_orientation.html  ifermi.analysis.longest_simple_paths.html  ifermi.analysis.plane_orientation.html  ifermi.analysis.sample_line_uniform.html  ifermi.analysis.sample_surface_uniform.html  ifermi.brillouin_zone.ReciprocalCell.html  ifermi.brillouin_zone.ReciprocalSlice.html  ifermi.brillouin_zone.WignerSeitzCell.html  ifermi.brillouin_zone.html  ifermi.html  ifermi.interpolate.FourierInterpolator.html  ifermi.interpolate.LinearInterpolator.html  ifermi.interpolate.html  ifermi.interpolate.trim_bandstructure.html  ifermi.kpoints.get_kpoint_mesh_dim.html  ifermi.kpoints.get_kpoint_spacing.html  ifermi.kpoints.html  ifermi.kpoints.kpoints_from_bandstructure.html  ifermi.kpoints.kpoints_to_first_bz.html  (+43 more)
.doctrees/: changelog.doctree  cli.doctree  contributing.doctree  contributors.doctree  genindex.doctree  ifermi.analysis.average_properties.doctree  ifermi.analysis.connected_images.doctree  ifermi.analysis.connected_subsurfaces.doctree  ifermi.analysis.doctree  ifermi.analysis.equivalent_surfaces.doctree  ifermi.analysis.equivalent_vertices.doctree  ifermi.analysis.isosurface_area.doctree  ifermi.analysis.isosurface_dimensionality.doctree  ifermi.analysis.line_orientation.doctree  ifermi.analysis.longest_simple_paths.doctree  ifermi.analysis.plane_orientation.doctree  ifermi.analysis.sample_line_uniform.doctree  ifermi.analysis.sample_surface_uniform.doctree  ifermi.brillouin_zone.ReciprocalCell.doctree  ifermi.brillouin_zone.ReciprocalSlice.doctree  ifermi.brillouin_zone.WignerSeitzCell.doctree  ifermi.brillouin_zone.doctree  ifermi.doctree  ifermi.interpolate.FourierInterpolator.doctree  ifermi.interpolate.LinearInterpolator.doctree  ifermi.interpolate.doctree  ifermi.interpolate.trim_bandstructure.doctree  ifermi.kpoints.doctree  ifermi.kpoints.get_kpoint_mesh_dim.doctree  ifermi.kpoints.get_kpoint_spacing.doctree  ifermi.kpoints.kpoints_from_bandstructure.doctree  ifermi.kpoints.kpoints_to_first_bz.doctree  ifermi.kpoints.sort_boltztrap_to_spglib.doctree  ifermi.plot.FermiSlicePlotter.doctree  ifermi.plot.FermiSurfacePlotter.doctree  ifermi.plot.cmap_to_mayavi.doctree  ifermi.plot.cmap_to_plotly.doctree  ifermi.plot.doctree  ifermi.plot.get_face_arrows.doctree  ifermi.plot.get_isosurface_colors.doctree  (+25 more)
.github/: dependabot.yml
_modules/: index.html
_sources/: changelog.rst.txt  cli.rst.txt  contributing.rst.txt  contributors.rst.txt  ifermi.analysis.average_properties.rst.txt  ifermi.analysis.connected_images.rst.txt  ifermi.analysis.connected_subsurfaces.rst.txt  ifermi.analysis.equivalent_surfaces.rst.txt  ifermi.analysis.equivalent_vertices.rst.txt  ifermi.analysis.isosurface_area.rst.txt  ifermi.analysis.isosurface_dimensionality.rst.txt  ifermi.analysis.line_orientation.rst.txt  ifermi.analysis.longest_simple_paths.rst.txt  ifermi.analysis.plane_orientation.rst.txt  ifermi.analysis.rst.txt  ifermi.analysis.sample_line_uniform.rst.txt  ifermi.analysis.sample_surface_uniform.rst.txt  ifermi.brillouin_zone.ReciprocalCell.rst.txt  ifermi.brillouin_zone.ReciprocalSlice.rst.txt  ifermi.brillouin_zone.WignerSeitzCell.rst.txt  ifermi.brillouin_zone.rst.txt  ifermi.interpolate.FourierInterpolator.rst.txt  ifermi.interpolate.LinearInterpolator.rst.txt  ifermi.interpolate.rst.txt  ifermi.interpolate.trim_bandstructure.rst.txt  ifermi.kpoints.get_kpoint_mesh_dim.rst.txt  ifermi.kpoints.get_kpoint_spacing.rst.txt  ifermi.kpoints.kpoints_from_bandstructure.rst.txt  ifermi.kpoints.kpoints_to_first_bz.rst.txt  ifermi.kpoints.rst.txt  ifermi.kpoints.sort_boltztrap_to_spglib.rst.txt  ifermi.plot.FermiSlicePlotter.rst.txt  ifermi.plot.FermiSurfacePlotter.rst.txt  ifermi.plot.cmap_to_mayavi.rst.txt  ifermi.plot.cmap_to_plotly.rst.txt  ifermi.plot.get_face_arrows.rst.txt  ifermi.plot.get_isosurface_colors.rst.txt  ifermi.plot.get_plot_type.rst.txt  ifermi.plot.get_segment_arrows.rst.txt  ifermi.plot.plotly_arrow.rst.txt  (+24 more)
_static/: custom.css
data_MgB2/: vasprun.xml
docs/: README.md  README.rst  cli.rst  conf.py  index.rst  introduction.rst  introduction_to_ifermi.nblink  license.rst  reference.rst
examples/: Betti_numbers_example.ipynb
ferm-surf/: bulk_objects_2.py  interpolator.py  plotter.py  plotting_objects.py  temp-plot.html  test.py
ifermi/: __init__.py  analysis.py  boltztrap.py  brillouin_zone.py  bulk_objects.py  cli.py  defaults.py  fermi_surface.py  generate_fs_data.py  interpolate.py  interpolator.py  kpoints.py  plot.py  plotter.py  requirements.rst  slice.py  surface.py  test.py
tests/: generate_test_data.py  (+3 more)
(+64 files in other folders)
